--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img src="assets/imgs/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png"
                 alt="">
             <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
-                autoplay loop muted></video>
+                autoplay loop muted style="width: 100%; height: auto;"></video>
         </div>
     </section>
     <div class="sep"></div>
@@ -70,7 +70,7 @@
         <div class="secimg hey">
             <img src="assets/imgs/2nd tv.png" alt="">
             <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
-                autoplay loop muted></video>
+                autoplay loop muted style="width: 100%; height: auto;"></video>
         </div>
     </section>
     <div class="sep"></div>
@@ -85,26 +85,98 @@
             membership.
         </div>
     </section>
+    <div class="separation"></div>
+
+    <section class="faq">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faqbox">
+            <span>What is NetFlix</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+        <div class="faqbox">
+            <span>How much does Netflix cost?</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+        <div class="faqbox">
+            <span>What can I watch on Netflix?</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+        <div class="faqbox">
+            <span>Where can I watch?</span>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+
+        </div>
+    </section>
+    <div class="separation"></div>
+
+    <footer>
+       
     <div class="sep"></div>
     <section class="faq">
-        <h1 style="color: white; align-items: center; justify-content: center; display: flex; font-size: larger;">About
-        </h1>
-        <div class="about">
+        <div class="questions">
+            Questions? Call 000-800-919-1694
+        </div>
+        <div class="footer">
+            <div class="footer-item"> 
+                <a href="faq">Investor Relations</a>
+                <a href="faq">Jobs</a>
+                <a href="faq">Ways to Watch</a>
+                <a href="faq">Terms of Use</a>
+            </div>
+
+            <div class="footer-item"> 
+                <a href="faq">Help Centre</a>
+                <a href="faq">Account</a>
+                <a href="faq">Speed Test</a>
+                <a href="faq">Legal Notices</a>
+            </div>
+            <div class="footer-item">
+                <a href="faq">Media Centre</a>
+                <a href="faq">Privacy</a>
+                <a href="faq">Cookie Preferences</a> 
+                <a href="faq">Corporate</a>
+            </div>
+
+            <div class="footer-item">
+                <a href="faq">Contact Us</a>
+                <a href="faq">Speed Test</a> 
+                <a href="faq">Legal Notices</a> 
+                <a href="faq">Only on Netflix</a>
+            </div>
+        </div>
+        <!-- <h1 style="color: white; align-items: center; justify-content: center; display: flex; font-size: larger;">About
+        </h1> -->
+        <!-- <div class="about">
             <div>
                 <span> Uday Natthani</span>
 
             </div>
-        </div>
+        </div> -->
         <!-- efhuiewgfiuwegfiuewgiuegfiuegifu -->
 
-        <div class="contact-intro">
+        <!-- <div class="contact-intro">
             <h2 class="contact-title" style="color: white;">Feedback</h2>
 
             <p class="contact-description">
 
             </p>
-        </div>
-
+        </div> -->
+<!-- 
         <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
 
             <input type="hidden" name="access_key" value="541ebeb4-1b99-4ec7-8539-45c99d6dcc53" />
@@ -132,7 +204,7 @@
             </div>
             <button class="form-submit" type="submit">Feedback</button>
              
-        </form>
+        </form> -->
 </body>
 
 </html>
